--- a/20181211-nyc_restaurants/nyc_restaurants.Rmd
+++ b/20181211-nyc_restaurants/nyc_restaurants.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Notebook"
+title: "TidyTuesday: NYC Restaurant Inspections"
 output: html_notebook
 editor_options: 
   chunk_output_type: console
