--- a/20190115-space_launches/space_launches.Rmd
+++ b/20190115-space_launches/space_launches.Rmd
@@ -6,7 +6,6 @@ editor_options:
 ---
 
 source: https://github.com/rfordatascience/tidytuesday/tree/master/data/2019/2019-01-15
-
 ```{r}
 # LOAD PACKAGES AND PARSE DATA
 library(tidyverse)
@@ -85,8 +84,6 @@ launches %>%
                      limits = c(0,1))
 ```
 
-
-
 ### Success rate for each country by agency type ?
 ```{r}
 # APPLY EMPIRICAL BAYESIAN STATS TO DATASET
@@ -136,4 +133,52 @@ launches_parsed %>%
   
 ```
 
+```{r}
+# EMPIRICAL BAYES MIXTURE MODELING AND EXPECTATION-MAXIMIZATION
+rockets <- launches %>%
+  select(type, state_code, category) %>%
+  mutate(category = ifelse(category == 'O', 1, 0)) %>%
+  group_by(type, state_code) %>%
+  summarize(success = sum(category),
+         total = n()) %>%
+  ungroup() %>%
+  add_ebb_estimate(success, total) 
 
+mm <- ebb_fit_mixture(rockets, success, total, clusters = 5)
+
+# CHECK INITIAL RESULTS
+ggplot(mm$assignments, aes(success / total, fill = .cluster)) +
+  geom_histogram(position = 'identity', alpha = 0.8, binwidth = .05) 
+
+launches %>%
+  inner_join(mm$assignments) %>%
+  mutate(.cluster = ifelse(.cluster == '1', 'Excellent', 
+                           ifelse(.cluster == '2', 'Horrible',
+                                  ifelse(.cluster == '3', 'Good',
+                                         ifelse(.cluster == '4', 'Bad',
+                                                ifelse(.cluster == '5', 'Average', .cluster))))),
+         .cluster = fct_relevel(.cluster, c("Excellent", "Good", "Average", "Bad", "Horrible")),
+         state_code = ifelse(state_code == 'RU', 'Russia / USSR',
+                             ifelse(state_code == 'SU', 'Russia / USSR', 
+                                    ifelse(state_code == 'US', 'United States',
+                                           ifelse(state_code == 'CN', 'China',
+                                                  ifelse(state_code == 'IN', 'India',
+                                                         ifelse(state_code == 'F', 'France',
+                                                                ifelse(state_code == 'J', 'Japan', 
+                                                                       ifelse(state_code == 'IL', 'Israel', state_code))))))))) %>%
+  group_by(launch_year, .cluster) %>%
+  mutate(count = n()) %>%
+  filter(grepl("China|France|Japan|Russia|United", state_code)) %>%
+  ggplot() +
+  geom_col(aes(launch_year, count, fill = .cluster), position = 'fill') +
+  facet_grid(state_code~.) +
+  theme_light(base_size = 15) +
+  scale_fill_brewer(palette = 'Spectral', direction = -1) +
+  labs(x = "",
+       y = "",
+       title = "Composition of space launch performance by country",
+       subtitle = "Assigned via mixture modeling and expectation-maximization",
+       caption = "Source: The Economist",
+       fill = "Cluster") +
+  scale_y_continuous(labels = percent_format())
+```
