--- a/20190730-steam_games/steam_games.Rmd
+++ b/20190730-steam_games/steam_games.Rmd
@@ -49,20 +49,21 @@ steam_games %>%
   ungroup() %>% 
   filter(n >= 80, publisher != 'NA') %>%
   mutate(publisher = paste0(publisher, " (", n, ")"),
-         publisher = reorder(publisher, n)) %>% 
+         publisher = reorder(publisher, desc(n))) %>% 
   ggplot(aes(publisher, max_owners, color = publisher)) +
   geom_jitter(show.legend = FALSE, size = 4, alpha = 0.5) +
   scale_color_brewer(palette = 'RdBu') +
-  coord_flip() +
   theme_light(base_size = 15) +
   labs(x = NULL,
        y = "Estimated Game Ownership per Million",
-       title = "Distribution of game ownership for publishers with more than 80 titles",
-       subtitle = "A few companies focus on niche audiences with low mass market appeal",
+       title = "Distribution of ownership for top game publishers",
+       subtitle = "(n) indicates total titles released",
        caption = "by: @eeysirhc\nsource: Steam Spy") +
   theme(panel.background = element_rect(fill = 'grey95'),
         plot.background = element_rect(fill = 'grey95'),
         panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank())
+        panel.grid.minor = element_blank(),
+        axis.text.x = element_text(angle = 45, hjust = 1)) 
 ```
+
 
